--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "mocha": "^6.1.4",
     "node-sass": "^4.12.0",
     "nyc": "^15.0.0",
+    "react-portal": "^4.2.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^2.0.0",
     "testcafe": "^1.9.4",
